--- a/package.json
+++ b/package.json
@@ -14,9 +14,9 @@
     "preact": "^10.16.0"
   },
   "devDependencies": {
-    "@preact/preset-vite": "^2.5.0",
-    "@tauri-apps/cli": "^1.4.0",
-    "typescript": "^5.1.6",
-    "vite": "^4.4.7"
+    "@preact/preset-vite": "2.5.0",
+    "@tauri-apps/cli": "1.4.0",
+    "typescript": "5.1.6",
+    "vite": "4.4.7"
   }
 }
