--- a/package.json
+++ b/package.json
@@ -10,13 +10,17 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tauri-apps/api": "^1.4.0",
-    "preact": "^10.16.0"
+    "@tauri-apps/api": "1.4.0",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.30",
+    "preact": "10.17.1",
+    "preact-router": "4.1.2",
+    "tailwindcss": "^3.3.3"
   },
   "devDependencies": {
     "@preact/preset-vite": "2.5.0",
     "@tauri-apps/cli": "1.4.0",
-    "typescript": "5.1.6",
-    "vite": "4.4.7"
+    "typescript": "5.2.2",
+    "vite": "4.4.9"
   }
 }
