--- a/package.json
+++ b/package.json
@@ -10,18 +10,20 @@
     "tauri": "tauri"
   },
   "dependencies": {
-    "@tabler/icons-preact": "^2.39.0",
-    "@tauri-apps/api": "1.5.0",
+    "@tabler/icons-preact": "^2.40.0",
+    "@tauri-apps/api": "1.5.1",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.31",
-    "preact": "10.18.1",
+    "highcharts": "11.2.0",
+    "highcharts-react-official": "^3.2.1",
+    "postcss": "8.4.31",
+    "preact": "10.19.1",
     "preact-router": "4.1.2",
-    "tailwindcss": "^3.3.3"
+    "tailwindcss": "^3.3.5"
   },
   "devDependencies": {
-    "@preact/preset-vite": "2.5.0",
-    "@tauri-apps/cli": "1.5.2",
+    "@preact/preset-vite": "2.6.0",
+    "@tauri-apps/cli": "1.5.6",
     "typescript": "5.2.2",
-    "vite": "4.4.11"
+    "vite": "4.5.0"
   }
 }
