--- a/.prettierrc.json
+++ b/.prettierrc.json
@@ -1,7 +1,6 @@
 {
     "printWidth": 100,
-    "semi": false,
-    "tabWidth": 4,
     "useTabs": true,
-    "arrowParens": "avoid"
+    "tabWidth": 4,
+    "semi": false
 }
