--- a/package.json
+++ b/package.json
@@ -1,29 +1,17 @@
 {
-  "name": "climabadalona",
-  "private": true,
-  "version": "0.0.0",
+  "name": "tempsbdn",
   "type": "module",
+  "version": "0.0.1",
   "scripts": {
-    "dev": "vite",
-    "build": "tsc && vite build",
-    "preview": "vite preview",
-    "tauri": "tauri"
+    "dev": "astro dev",
+    "start": "astro dev",
+    "build": "astro check && astro build",
+    "preview": "astro preview",
+    "astro": "astro"
   },
   "dependencies": {
-    "@tabler/icons-preact": "^2.40.0",
-    "@tauri-apps/api": "1.5.1",
-    "autoprefixer": "^10.4.16",
-    "highcharts": "11.2.0",
-    "highcharts-react-official": "^3.2.1",
-    "postcss": "8.4.31",
-    "preact": "10.19.1",
-    "preact-router": "4.1.2",
-    "tailwindcss": "^3.3.5"
-  },
-  "devDependencies": {
-    "@preact/preset-vite": "2.6.0",
-    "@tauri-apps/cli": "1.5.6",
-    "typescript": "5.2.2",
-    "vite": "4.5.0"
+    "@astrojs/tailwind": "5.0.2",
+    "astro": "3.6.3",
+    "tailwindcss": "3.3.5"
   }
 }
