--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@astrojs/tailwind": "5.0.2",
+    "@astrojs/vercel": "^5.2.0",
     "astro": "3.6.3",
     "tailwindcss": "3.3.5"
   }
